--- a/.github/workflows/gen-tiles.yml
+++ b/.github/workflows/gen-tiles.yml
@@ -35,8 +35,6 @@ jobs:
             if (nameSet.size !== tileNames.length) {
               throw new Error('Duplicate tile name detected in manifest.');
             }
-            console.log('SET', nameSet)
-            console.log([...nameSet]);
             core.setOutput('matrix', JSON.stringify([...nameSet]));
             core.setOutput('ssh', JSON.stringify(manifest.ssh));
   build-and-deploy:
@@ -61,10 +59,11 @@ jobs:
           const core = require('@actions/core');
           const manifestContent = fs.readFileSync('./manifest.json', 'utf8');
           const manifest = JSON5.parse(manifestContent);
-          const tileConfig = manifest.tiles.find(tile => tile.name === '${{ matrix }}');
+          const tileConfig = manifest.tiles.find(tile => tile.name === '${{ matrix.name }}');
           if (!tileConfig) {
-            throw new Error(`Tile configuration for '${{ matrix }}' not found.`);
+            throw new Error(`Tile configuration for '${{ matrix.name }}' not found.`);
           }
+          console.log("tileConfig", tileConfig);
           core.setOutput('style', tileConfig.style);
           core.setOutput('zoom_level', tileConfig.zoom_level);
           core.setOutput('bounds', JSON.stringify(tileConfig.bounds));
@@ -77,7 +76,7 @@ jobs:
           -Z ${{ steps.load-tile-config.outputs.zoom_level }} \
           --bounds ${{ steps.load-tile-config.outputs.bounds }} \
           --monthyear ${{ steps.load-tile-config.outputs.monthyear }} \
-          -f ${{ matrix }}
+          -f ${{ matrix.name }}
       - name: Copy mbtiles to EDT Cloud
         if: ${{ fromJson(needs.prepare.outputs.sshInfo).host }}
         uses: appleboy/scp-action@v0.1.3
@@ -86,7 +85,7 @@ jobs:
           username: ${{ fromJson(needs.prepare.outputs.sshInfo).username }}
           port: ${{ fromJson(needs.prepare.outputs.sshInfo).port }}
           key: ${{ secrets.SSH_KEY }}
-          source: "${{ github.workspace }}/outputs/${{ matrix }}.mbtiles"
+          source: "${{ github.workspace }}/outputs/${{ matrix.name }}.mbtiles"
           target: "${{ fromJson(needs.prepare.outputs.sshInfo).target }}/${{ steps.load-tile-config.outputs.style }}-${{ github.run_id }}"
           strip_components: 3
           timeout: 60s
