--- a/.github/workflows/gen-tiles.yml
+++ b/.github/workflows/gen-tiles.yml
@@ -53,26 +53,27 @@ jobs:
       - run: npm install json5
       - name: Load tile configuration
         id: load-tile-config
+        uses: actions/github-script@v7
         env:
           TILE_NAME: ${{ matrix.name }}
-        run: |
-          const fs = require('fs');
-          const JSON5 = require('json5');
-          const core = require('@actions/core');
-          const manifestContent = fs.readFileSync('./manifest.json', 'utf8');
-          const manifest = JSON5.parse(manifestContent);
-          console.log('NAME', process.env.TILE_NAME);
-          const tileName = process.env.TILE_NAME;
-          const tileConfig = manifest.tiles.find(tile => tile.name === tileName);
-          if (!tileConfig) {
-            throw new Error(`Tile configuration for '${tileName}' not found.`);
-          }
-          console.log("tileConfig", tileConfig);
-          core.setOutput('style', tileConfig.style);
-          core.setOutput('zoom_level', tileConfig.zoom_level);
-          core.setOutput('bounds', JSON.stringify(tileConfig.bounds));
-          core.setOutput('monthyear', tileConfig.monthyear);
-        shell: bash
+        with:
+          script: |
+            const fs = require('fs');
+            const JSON5 = require('json5');
+            const core = require('@actions/core');
+            const manifestContent = fs.readFileSync('./manifest.json', 'utf8');
+            const manifest = JSON5.parse(manifestContent);
+            console.log('NAME', process.env.TILE_NAME);
+            const tileName = process.env.TILE_NAME;
+            const tileConfig = manifest.tiles.find(tile => tile.name === tileName);
+            if (!tileConfig) {
+              throw new Error(`Tile configuration for '${tileName}' not found.`);
+            }
+            console.log("tileConfig", tileConfig);
+            core.setOutput('style', tileConfig.style);
+            core.setOutput('zoom_level', tileConfig.zoom_level);
+            core.setOutput('bounds', tileConfig.bounds);
+            core.setOutput('monthyear', tileConfig.monthyear);
       - name: Scrape tiles
         run: |
           docker run --rm -v ${{ github.workspace }}/outputs:/app/outputs communityfirst/mapgl-tile-renderer:main \
