Use secrets-to-env-action

--- a/.github/workflows/gen-tiles.yml
+++ b/.github/workflows/gen-tiles.yml
@@ -49,20 +49,22 @@ jobs:
         with:
           node-version: "20.x"
       - run: npm install json5
+      - uses: oNaiPs/secrets-to-env-action@v1
+        with:
+          secrets: ${{ toJSON(secrets) }}
       - name: Load manifest
         id: load-manifest
         uses: actions/github-script@v7
         env:
           TILE_NAME: ${{ matrix.name }}
           ACTION_TYPE: ${{ github.event_name }}
-          SECRETS_CONTEXT: ${{ toJson(secrets) }}
         with:
           script: |
             const fs = require('fs');
             const JSON5 = require('json5');
             const manifestContent = fs.readFileSync('./manifest.json', 'utf8');
             const manifest = JSON5.parse(manifestContent);
-            const { ACTION_TYPE, SECRETS_CONTEXT, TILE_NAME } = process.env;
+            const { ACTION_TYPE, TILE_NAME } = process.env;
             const tileName = (ACTION_TYPE === 'push') ? `test-${TILE_NAME}` : TILE_NAME;
             let sshInfo = manifest.ssh;
             let useSSH = true;
@@ -83,8 +85,8 @@ jobs:
               `-f ${tileName}`,
             ];
             // Include additional options if they are present in the tileConfig
-            console.log('SECRETS_CONTEXT', SECRETS_CONTEXT, tileConfig.apiKeySecret, SECRETS_CONTEXT[tileConfig.apiKeySecret])
-            const apiKey = tileConfig.apiKeySecret ? SECRETS_CONTEXT[tileConfig.apiKeySecret] : SECRETS_CONTEXT.API_KEY;
+            console.log('process.env', process.env, tileConfig.apiKeySecret);
+            const apiKey = tileConfig.apiKeySecret ? process.env[tileConfig.apiKeySecret] : process.env.API_KEY;
             if (apiKey) commandParts.push(`--apikey ${apiKey}`);
             if (tileConfig.monthyear) commandParts.push(`--monthyear ${tileConfig.monthyear}`);
             if (tileConfig.mapbox_style) commandParts.push(`--mapboxstyle ${tileConfig.mapbox_style}`);
