--- a/.github/workflows/gen-tiles.yml
+++ b/.github/workflows/gen-tiles.yml
@@ -61,6 +61,7 @@ jobs:
         with:
           script: |
             const fs = require('fs');
+            const path = require('path');
             const JSON5 = require('json5');
             const manifestContent = fs.readFileSync('./manifest.json', 'utf8');
             const manifest = JSON5.parse(manifestContent);
@@ -109,7 +110,7 @@ jobs:
               const currentYear = currentDate.getFullYear();
               const currentMonth = currentDate.toLocaleString('default', { month: 'long' }).toLowerCase();
               const currentDay = String(currentDate.getDate()).padStart(2, '0');
-              const targetPath = `${sshInfo.target}/${tileConfig.style}-${currentDay}-${currentMonth}-${currentYear}`;
+              const targetPath = path.join(sshInfo.target, `${tileConfig.style}-${currentDay}-${currentMonth}-${currentYear}`);
               core.setOutput('sshTarget', targetPath);
             }
             const fileName = `${tileName}.mbtiles`;
